--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
 /* Theme */
-$primary: #1DB954; // Spotify Green
+$primary: #1DB954;
 
 $bg: mix(#1d1f31, $primary, 10%); // Slight green tint
 $active-bg: mix(#11131f, $primary, 10%);
