--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,16 +1,16 @@
-$primary: #1DB954;
-
-$bg: #0A0A1A;
-$active-bg: darken($bg, 5%);
-$hover-bg: lighten($bg, 5%);
-$fg: $primary;
+/* Theme */
+$bg: #0e1916;
+$active-bg: #010201;
+$hover-bg: #12131e;
+$fg: #fff;
 $nav-bg: $bg;
-$title-fg: #4a68b9;
+$title-fg: #2ddb9f;
 
 $taproot: #eba814;
 $taproot-light: #d5a90a;
 $taproot-dark: #9d7c05;
 
+/* Bootstrap */
 $body-bg: $bg;
 $body-color: $fg;
 $gray-800: $bg;
@@ -18,34 +18,35 @@ $gray-700: $fg;
 
 $nav-tabs-link-active-bg: $active-bg;
 
-$secondary: #2d3348;
-$tertiary: #653b9c;
+$primary: #1c7f5d;
+$secondary: #0f2f24;
+$tertiary: #1d8d66;
 $success: #1a9436;
-$info: #1bd8f4;
+$info: #2ddb7f;
 
 $h5-font-size: 1.15rem !default;
 
 $pagination-bg: $body-bg;
 $pagination-border-color: $gray-800;
-$pagination-disabled-bg: $fg;
+$pagination-disabled-bg:           $fg;
 $pagination-disabled-border-color: $bg;
-$pagination-active-color: $fg;
-$pagination-active-bg: $tertiary;
-$pagination-hover-bg: $hover-bg;
-$pagination-hover-border-color: $bg;
-$pagination-disabled-bg: $bg;
+$pagination-active-color:          $fg;
+$pagination-active-bg:             $tertiary;
+$pagination-hover-bg:              $hover-bg;
+$pagination-hover-border-color:     $bg;
+$pagination-disabled-bg:          $bg;
 
 $custom-select-indicator-color: $fg;
 
 .input-group-text {
-  background-color: $bg !important;
-  border: 1px solid darken($bg, 10%) !important;
+  background-color: #1c2031 !important;
+  border: 1px solid #20263e !important;
 }
 
-$link-color: $info;
-$link-decoration: none !default;
-$link-hover-color: darken($link-color, 15%) !default;
-$link-hover-decoration: underline !default;
+$link-color:                $info;
+$link-decoration:           none !default;
+$link-hover-color:          darken($link-color, 15%) !default;
+$link-hover-decoration:     underline !default;
 
 $dropdown-bg: $bg;
 $dropdown-link-color: $fg;
@@ -78,28 +79,28 @@ $dropdown-link-active-bg: $active-bg;
   --skeleton-bg: #2e324e;
   --skeleton-bg-light: #5d6182;
 
-  --box-bg: #24273e;
-  --stat-box-bg: #181b2d;
-  --alert-bg: #3a1c61;
-  --navbar-bg: #212121;
+  --box-bg: ligthen($bg);
+  --stat-box-bg: ligthen($bg, 10%);
+  --alert-bg: #0c642b;
+  --navbar-bg: $nav-bg;
   --transparent-fg: #ffffff66;
   --fade-out-box-bg-start: rgba(36, 39, 62, 0);
   --fade-out-box-bg-end: rgba(36, 39, 62, 1);
   --opacity: 0.57;
 
-  --testnet: #1d486f;
-  --signet: #6f1d5d;
-  --liquid: #116761;
-  --liquidtestnet: #494a4a;
+  --testnet: #0c642b;
+  --signet: #0c642b;
+  --liquid: #0c642b;
+  --liquidtestnet: #0c642b;
 
-  --mainnet-alt: #9339f4;
-  --testnet-alt: #183550;
-  --signet-alt: #471850;
-  --liquidtestnet-alt: #272e46;
+  --mainnet-alt: #0c642b;
+  --testnet-alt: #0c642b;
+  --signet-alt: #0c642b;
+  --liquidtestnet-alt: #0c642b;
 
-  --taproot: #{$taproot};
-  --taproot-light: #{$taproot-light};
-  --taproot-dark: #{$taproot-dark};
+  --taproot: #eba814;
+  --taproot-light: #d5a90a;
+  --taproot-dark: #9d7c05;
 
   --green: #3bcc49;
   --red: #dc3545;
@@ -108,10 +109,10 @@ $dropdown-link-active-bg: $active-bg;
   --tooltip-grey: #b1b1b1;
   --orange: #b86d12;
 
-  --search-button: #4d2d77;
-  --search-button-border: #472a6e;
-  --search-button-focus: #533180;
-  --search-button-shadow: #7c58ab80;
+  --search-button: #1c7f5d;
+  --search-button-border: #1c7f5d;
+  --search-button-focus: #23966d;
+  --search-button-shadow: #235f4a;
 }
 html, body {
   height: 100%;
