--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -183,7 +183,7 @@ main {
 .form-control {
   color: var(--fg);
   background-color: var(--secondary);
-  border: 1px solid rgba(17, 19, 31, 0.2);
+  border: 1px solid #2ddb9f;
 }
 
 .form-control:focus {
