fix: replace endpoint

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1007,7 +1007,7 @@
       >
       as published by the Free Software Foundation, either version 3 of the
       License or any later version approved by a proxy statement published on
-      &lt;https://luckyscan.org/about&gt;.<br />
+      &lt;https://xbtscan.org/about&gt;.<br />
     </p>
     <p>
       This program is distributed in the hope that it will be useful, but
@@ -1037,11 +1037,11 @@
       While our software is available under an open source software license, the
       copyright license does not include an implied right or license to use our
       trademarks. See our
-      <a href="https://luckyscan.org/trademark-policy"
+      <a href="https://xbtscan.org/trademark-policy"
         >Trademark Policy and Guidelines</a
       >
       for more details, published on
-      &lt;https://luckyscan.org/trademark-policy&gt;.
+      &lt;https://xbtscan.org/trademark-policy&gt;.
     </p>
   </div>
 
