--- a/frontend/src/app/components/address/address.component.html
+++ b/frontend/src/app/components/address/address.component.html
@@ -285,9 +285,9 @@
         </ng-container>
         <br />
         <a
-          href="https://luckyscan.org/address/{{ addressString }}"
+          href="https://xbtscan.org/address/{{ addressString }}"
           target="_blank"
-          >https://luckyscan.org/address/{{ addressString }}</a
+          >https://xbtscan.org/address/{{ addressString }}</a
         >
         <br />
         <a
