--- a/frontend/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/frontend/src/app/components/privacy-policy/privacy-policy.component.html
@@ -33,7 +33,7 @@
       <br />
 
       <p *ngIf="officialMempoolSpace">
-        The <a href="https://luckyscan.org/">mempool.space</a> website, the
+        The <a href="https://xbtscan.org/">mempool.space</a> website, the
         <a href="https://liquid.network/">liquid.network</a> website, the
         <a href="https://bitcoin.gob.sv/">bitcoin.gob.sv</a> website, their
         associated API services, and related network and server infrastructure
@@ -115,8 +115,8 @@
       <p *ngIf="!officialMempoolSpace">
         When using Mempool Accelerator&trade; the mempool.space privacy policy
         will apply:
-        <a href="https://luckyscan.org/privacy-policy"
-          >https://luckyscan.org/privacy-policy</a
+        <a href="https://xbtscan.org/privacy-policy"
+          >https://xbtscan.org/privacy-policy</a
         >.
       </p>
 
