--- a/frontend/src/app/components/terms-of-service/terms-of-service.component.html
+++ b/frontend/src/app/components/terms-of-service/terms-of-service.component.html
@@ -18,7 +18,7 @@
 
     <div class="text-left">
       <p *ngIf="officialMempoolSpace">
-        The <a href="https://luckyscan.org/">mempool.space</a> website, the
+        The <a href="https://xbtscan.org/">mempool.space</a> website, the
         <a href="https://liquid.network/">liquid.network</a> website, the
         <a href="https://bitcoin.gob.sv/">bitcoin.gob.sv</a> website, their
         associated API services, and related network and server infrastructure
@@ -106,7 +106,7 @@
             >at least 5 contributions visible on GitHub</a
           >, the contributor's GitHub profile photo will automatically be
           displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to their GitHub profile</u>.
         </li>
         <br />
@@ -116,10 +116,10 @@
           <a href="https://github.com/mempool/mempool"
             >The Mempool Open Source Project</a
           >
-          on <a href="https://luckyscan.org/about">mempool.space/about</a>, the
+          on <a href="https://xbtscan.org/about">mempool.space/about</a>, the
           XBT community members's Twitter profile photo will automatically
           be displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to their Twitter profile</u>.
         </li>
         <br />
@@ -136,7 +136,7 @@
           >
           for at least 6 months, the XBT community member's GitHub profile
           photo will automatically be displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to their GitHub profile</u>.
         </li>
         <br />
@@ -147,7 +147,7 @@
             >The Mempool Open Source Project</a
           >
           into their software, the open source project's logo may be displayed
-          on <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          on <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to the project's GitHub repository</u>.
         </li>
         <br />
@@ -157,7 +157,7 @@
           <a href="https://github.com/mempool/mempool"
             >The Mempool Open Source Project</a
           >, the federation or alliance logo may be displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to the alliance website</u>.
         </li>
         <br />
@@ -173,7 +173,7 @@
             >our GitHub Sponsors program</a
           >
           for at least 25 months, the organization's logo may be displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to the organization's website</u>.
         </li>
         <br />
@@ -184,7 +184,7 @@
           <a href="https://github.com/mempool/mempool"
             >The Mempool Open Source Project</a
           >, the organization's logo may be displayed on
-          <a href="https://luckyscan.org/about">mempool.space/about</a>, with
+          <a href="https://xbtscan.org/about">mempool.space/about</a>, with
           <u>a link to the organization's website</u>.
         </li>
       </ul>
@@ -200,7 +200,7 @@
         <h4>NO ALTCOINS</h4>
 
         <p>
-          The <a href="https://luckyscan.org/">mempool.space</a> explorer is
+          The <a href="https://xbtscan.org/">mempool.space</a> explorer is
           XBT Only.
         </p>
 
@@ -220,7 +220,7 @@
       <h4>MEMPOOL ACCELERATOR&trade;</h4>
 
       <p>
-        <a href="https://luckyscan.org/accelerator"
+        <a href="https://xbtscan.org/accelerator"
           >Mempool Accelerator&trade;</a
         >
         enables members of the XBT community to submit requests for
