--- a/frontend/src/app/components/trademark-policy/trademark-policy.component.html
+++ b/frontend/src/app/components/trademark-policy/trademark-policy.component.html
@@ -7,8 +7,8 @@
     <p>
       Please view the Trademark Policy and Guidelines for The Mempool Open
       Source Project at
-      <a href="https://luckyscan.org/trademark-policy"
-        >https://luckyscan.org/trademark-policy</a
+      <a href="https://xbtscan.org/trademark-policy"
+        >https://xbtscan.org/trademark-policy</a
       >.
     </p>
   </div>
