--- a/frontend/src/app/components/transaction/transaction-details/transaction-details.component.html
+++ b/frontend/src/app/components/transaction/transaction-details/transaction-details.component.html
@@ -272,7 +272,7 @@
             >
             <a
               *ngIf="!eligibleForAcceleration"
-              href="https://luckyscan.org/accelerator#why-cant-accelerate"
+              href="https://xbtscan.org/accelerator#why-cant-accelerate"
               target="_blank"
               class="info-badges ml-1"
               i18n-ngbTooltip="Mempool Accelerator&trade; tooltip"
