--- a/frontend/src/app/docs/api-docs/api-docs.component.html
+++ b/frontend/src/app/docs/api-docs/api-docs.component.html
@@ -136,7 +136,7 @@
             >
             <a
               class="btn btn-small btn-purple"
-              href="https://luckyscan.org/enterprise"
+              href="https://xbtscan.org/enterprise"
               >More Info
               <fa-icon
                 [icon]="['fas', 'angle-right']"
@@ -159,7 +159,7 @@
           Note that we enforce rate limits. If you exceed these limits, you will
           get an HTTP 429 error. If you repeatedly exceed the limits, you may be
           banned from accessing the service altogether. Consider an
-          <a href="https://luckyscan.org/enterprise">enterprise sponsorship</a>
+          <a href="https://xbtscan.org/enterprise">enterprise sponsorship</a>
           if you need higher API limits.
         </p>
 
@@ -399,7 +399,7 @@
             <a href="/testnet4/docs/api/electrs">XBT Testnet4</a> is
             publicly available. Electrum RPC interface for all other networks is
             available to
-            <a href="https://luckyscan.org/enterprise">sponsors</a>
+            <a href="https://xbtscan.org/enterprise">sponsors</a>
             only—whitelisting is required.
           </p>
         </div>
@@ -586,7 +586,7 @@
       [href]="[
         isMempoolSpaceBuild
           ? '/accelerator'
-          : 'https://luckyscan.org/accelerator'
+          : 'https://xbtscan.org/accelerator'
       ]"
       [target]="isMempoolSpaceBuild ? '' : 'blank'"
       >Mempool Accelerator™</a
@@ -1262,7 +1262,7 @@
   </p>
   <p>
     In any case, we only provide support for manual deployments to
-    <a href="https://luckyscan.org/enterprise">enterprise sponsors</a>.
+    <a href="https://xbtscan.org/enterprise">enterprise sponsors</a>.
   </p>
   <p>
     For casual users, we strongly suggest installing Mempool using one of the
