--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -750,13 +750,13 @@
       <a
         href="https://github.com/btcpayserver/btcpayserver"
         target="_blank"
-        title="LKYPay Server"
+        title="XBTPay Server"
       >
         <img
           class="image not-rounded"
           src="/resources/profile/btcpayserver.svg"
         />
-        <span>LKYPay</span>
+        <span>XBTPay</span>
       </a>
       <a
         href="https://github.com/bisq-network/bisq"
