--- a/frontend/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/frontend/src/app/components/privacy-policy/privacy-policy.component.html
@@ -181,7 +181,7 @@
 
           <li>
             If you make a payment using XBT, we will process your payment
-            using our self-hosted LKYPay Server instance. We will not share your
+            using our self-hosted XBTPay Server instance. We will not share your
             payment details with any third-party. For payments made over the
             Lightning network, we may utilize third party LSPs / lightning
             liquidity providers.
