--- a/frontend/src/app/components/terms-of-service/terms-of-service.component.html
+++ b/frontend/src/app/components/terms-of-service/terms-of-service.component.html
@@ -112,7 +112,7 @@
         <br />
         <li>
           In order to acknowledge members of the XBT community who have
-          made a one-time donation of at least 0.01 LKY to
+          made a one-time donation of at least 0.01 XBT to
           <a href="https://github.com/mempool/mempool"
             >The Mempool Open Source Project</a
           >
