--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,6 @@
 /* Theme */
-$bg: #0e1916;
-$active-bg: #010201;
+$bg: #1f1f1f;
+$active-bg: #181818;
 $hover-bg: #12131e;
 $fg: #fff;
 $nav-bg: $bg;
@@ -18,9 +18,9 @@ $gray-700: $fg;
 
 $nav-tabs-link-active-bg: $active-bg;
 
-$primary: #1c7f5d;
-$secondary: #0f2f24;
-$tertiary: #1d8d66;
+$primary: #facc3b;
+$secondary: #967b25;
+$tertiary: #d6b033;
 $success: #1a9436;
 $info: #2ddb9f;
 
