--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -18,9 +18,9 @@ $gray-700: $fg;
 
 $nav-tabs-link-active-bg: $active-bg;
 
-$primary: #facc3b;
-$secondary: #967b25;
-$tertiary: #d6b033;
+$primary: #d68b09;
+$secondary: #141414;
+$tertiary: #bb7a09;
 $success: #1a9436;
 $info: #2ddb9f;
 
@@ -88,15 +88,15 @@ $dropdown-link-active-bg: $active-bg;
   --fade-out-box-bg-end: rgba(36, 39, 62, 1);
   --opacity: 0.57;
 
-  --testnet: #0c642b;
-  --signet: #0c642b;
-  --liquid: #0c642b;
-  --liquidtestnet: #0c642b;
+  --testnet: #bb7a09;
+  --signet: #bb7a09;
+  --liquid: #bb7a09;
+  --liquidtestnet: #bb7a09;
 
-  --mainnet-alt: #0c642b;
-  --testnet-alt: #0c642b;
-  --signet-alt: #0c642b;
-  --liquidtestnet-alt: #0c642b;
+  --mainnet-alt: #bb7a09;
+  --testnet-alt: #bb7a09;
+  --signet-alt: #bb7a09;
+  --liquidtestnet-alt: #bb7a09;
 
   --taproot: #eba814;
   --taproot-light: #d5a90a;
