--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,7 +4,7 @@ $active-bg: #181818;
 $hover-bg: #12131e;
 $fg: #fff;
 $nav-bg: $bg;
-$title-fg: #2ddb9f;
+$title-fg: #d68b09;
 
 $taproot: #eba814;
 $taproot-light: #d5a90a;
