--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -80,7 +80,7 @@ $dropdown-link-active-bg: $active-bg;
   --skeleton-bg-light: #5d6182;
 
   --box-bg: #{$bg} !important;
-  --stat-box-bg: #1f1f1f;
+  --stat-box-bg: #363636;
   --alert-bg: #1f1f1f;
   --navbar-bg: #{$nav-bg};
   --transparent-fg: #ffffff66;
