--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,7 +4,7 @@ $active-bg: #181818;
 $hover-bg: #12131e;
 $fg: #fff;
 $nav-bg: $bg;
-$title-fg: #ffac1b;
+$title-fg: #feebad;
 
 $taproot: #eba814;
 $taproot-light: #d5a90a;
@@ -18,11 +18,11 @@ $gray-700: $fg;
 
 $nav-tabs-link-active-bg: $active-bg;
 
-$primary: #d68b09;
+$primary: #6b6b6b;
 $secondary: #363636;
 $tertiary: #bb7a09;
 $success: #1a9436;
-$info: #ffac1b;
+$info: #feebad;
 
 $h5-font-size: 1.15rem !default;
 
