--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -20,7 +20,7 @@ $nav-tabs-link-active-bg: $active-bg;
 
 $primary: #6b6b6b;
 $secondary: #363636;
-$tertiary: #6b6b6b;
+$tertiary: #f1c83e;
 $success: #1a9436;
 $info: #feebad;
 
